--- a/index.html
+++ b/index.html
@@ -33,8 +33,6 @@
 
           <hr />
 
-          <!-- <div class="line">|</div> -->
-
           <img
             class="nsdc-logo"
             src="./images/nsdc-logo-in-clear-background-1@2x.png"
@@ -143,12 +141,12 @@
             <p class="course-title">Beginner</p>
           </div>
 
-          <div class="xyz">
-            <p class="xyz1">100% Job Guarantee</p>
-            <p class="xyz1">Lifetime Access</p>
+          <div class="pay-after">
+            <p class="plac-lif">100% Job Guarantee</p>
+            <p class="plac-lif">Lifetime Access</p>
           </div>
 
-          <p class="sac1">For you to start their coding journey from Scratch</p>
+          <p class="sec1">For you to start their coding journey from Scratch</p>
 
           <div class="course-rows">
             <p class="sac2">Placement Starts</p>
@@ -184,7 +182,7 @@
 
             <button class="course-btn dark">
               <a class="dark" href="">Learn More</a>
-              <img src="./images/./images//images/Frame (1).svg" alt="" />
+              <img src="./images/Frame (1).svg" alt="" />
             </button>
           </div>
         </div>
@@ -196,12 +194,12 @@
           </div>
 
           <!--  -->
-          <div class="xyz11">
-            <p class="xyz21">Pay After Placement</p>
-            <p class="xyz21">Lifetime Access</p>
+          <div class="pay-after">
+            <p class="plac-lif">Pay After Placement</p>
+            <p class="plac-lif">Lifetime Access</p>
           </div>
 
-          <p class="sac1">
+          <p class="sec1">
             For learners with good aptitude & logical reasoning
           </p>
 
@@ -289,7 +287,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <img src="./images/Ellipse 42.svg">
                     <p><i>Virat Kohali<br><span class="text-secondary">SDE-II at Indian Cricket Board</span></i></p>
-                    <img src="LinkedIN (1).svg">
+                    <img src="./images/LinkedIN (1).svg">
                 </div>
                 <p class="text-secondary mt-3"><i>My Life changed when I became a part of the AccioJob family. Before that I was not able to score any centuries. As soon as I joined Accio, I hit a century against Afganistan.</i></p>
                 <p class="text-secondary mt-2"><i>03/Oct/2023</i></p>
@@ -298,7 +296,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <img src="./images/Ellipse 42 (1).svg">
                     <p><i>Virat Kohali<br><span class="text-secondary">SDE-II at Indian Cricket Board</span></i></p>
-                    <img src="Quora.svg">
+                    <img src="./images/Quora.svg">
                 </div>
                 <p class="text-secondary mt-3"><i>My Life changed when I became a part of the AccioJob family. Before that I was not able to score any centuries. As soon as I joined Accio, I hit a century against Afg anistan. My Life changed when I became a part of the AccioJob family. Before that I was not able to score any centuries. As soon as I joined</i></p>
                 <p class="text-secondary mt-2"><i>03/Oct/2023</i></p>
@@ -307,7 +305,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <img src="./images/Ellipse 42 (2).svg">
                     <p><i>Virat Kohali<br><span class="text-secondary">SDE-II at Indian Cricket Board</span></i></p>
-                    <img src="LinkedIN (1).svg">
+                    <img src="./images/LinkedIN (1).svg">
                 </div>
                 <p class="text-secondary mt-3"><i>My Life changed when I became a part of the AccioJob family. Before that I was not able to score any centuries. As soon as I joined Accio, I hit a century against Afg anistan</i></p>
                 <p class="text-secondary mt-2"><i>03/Oct/2023</i></p>
@@ -316,7 +314,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <img src="./images/Ellipse 42 (3).svg">
                     <p><i>Virat Kohali<br><span class="text-secondary">SDE-II at Indian Cricket Board</span></i></p>
-                    <img src="LinkedIN (1).svg">
+                    <img src="./images/LinkedIN (1).svg">
                 </div>
                 <p class="text-secondary mt-3"><i>My Life changed when I became a part of the AccioJob family. Before that I was not able to score any centuries. As soon as I joined Accio, I hit a century against Afg anistan. My Life changed when I became a part of the AccioJob family. Before that I was not able to score any centuries. As soon as I joined</i></p>
                 <p class="text-secondary mt-2"><i>03/Oct/2023</i></p>
@@ -325,7 +323,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <img src="./images/Ellipse 42 (4).svg">
                     <p><i>Virat Kohali<br><span class="text-secondary">SDE-II at Indian Cricket Board</span></i></p>
-                    <img src="LinkedIN (1).svg">
+                    <img src="./images/LinkedIN (1).svg">
                 </div>
                 <p class="text-secondary mt-3"><i>My Life changed when I became a part of the AccioJob family. Before that I was not able to score any centuries. As soon as I joined Accio, I hit a century against Afganistan.</i></p>
                 <p class="text-secondary mt-2"><i>03/Oct/2023</i></p>
@@ -334,7 +332,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <img src="./images/Ellipse 42.svg">
                     <p><i>Virat Kohali<br><span class="text-secondary">SDE-II at Indian Cricket Board</span></i></p>
-                    <img src="LinkedIN (1).svg">
+                    <img src="./images/LinkedIN (1).svg">
                 </div>
                 <p class="text-secondary mt-3"><i>My Life changed when I became a part of the AccioJob family. Before that I was not able to score any centuries. As soon as I joined Accio, I hit a century against Afg anistan. My Life changed when I became a part of the AccioJob family. Before that I was not able to score any centuries. As soon as I joined</i></p>
                 <p class="text-secondary mt-2"><i>03/Oct/2023</i></p>
