--- a/index.html
+++ b/index.html
@@ -252,24 +252,24 @@
         </div>
         <div id="scroll-container">
             <div class="d-flex justify-content-between flex-wrap" id="list">
-                <img class="mx-3 my-2" src="/images/Frame 629.svg">
-                <img class="mx-3 my-2" src="/images/Frame 630.svg">
-                <img class="mx-3 my-2" src="/images/Frame 636.svg">
-                <img class="mx-3 my-2" src="/images/Frame 631.svg">
-                <img class="mx-3 my-2" src="/images/Frame 632.svg">
-                <img class="mx-3 my-2" src="/images/Frame 634.svg">
-                <img class="mx-3 my-2" src="/images/Frame 639.svg">
-                <img class="mx-3 my-2" src="/images/Frame 640.svg">
-                <img class="mx-3 my-2" src="/images/Frame 641.svg">
-                <img class="mx-3 my-2" src="/images/Frame 642.svg">
-                <img class="mx-3 my-2" src="/images/Frame 643.svg">
-                <img class="mx-3 my-2" src="/images/Frame 647.svg">
-                <img class="mx-3 my-2" src="/images/Frame 649.svg">
-                <img class="mx-3 my-2" src="/images/Frame 651.svg">
-                <img class="mx-3 my-2" src="/images/Frame 652.svg">
-                <img class="mx-3 my-2" src="/images/Frame 656.svg">
-                <img class="mx-3 my-2" src="/images/Frame 638.svg">
-                <img class="mx-3 my-2" src="/images/Frame 655.svg">
+                <img class="mx-3 my-2" src="./images/Frame 629.svg">
+                <img class="mx-3 my-2" src="./images/Frame 630.svg">
+                <img class="mx-3 my-2" src="./images/Frame 636.svg">
+                <img class="mx-3 my-2" src="./images/Frame 631.svg">
+                <img class="mx-3 my-2" src="./images/Frame 632.svg">
+                <img class="mx-3 my-2" src="./images/Frame 634.svg">
+                <img class="mx-3 my-2" src="./images/Frame 639.svg">
+                <img class="mx-3 my-2" src="./images/Frame 640.svg">
+                <img class="mx-3 my-2" src="./images/Frame 641.svg">
+                <img class="mx-3 my-2" src="./images/Frame 642.svg">
+                <img class="mx-3 my-2" src="./images/Frame 643.svg">
+                <img class="mx-3 my-2" src="./images/Frame 647.svg">
+                <img class="mx-3 my-2" src="./images/Frame 649.svg">
+                <img class="mx-3 my-2" src="./images/Frame 651.svg">
+                <img class="mx-3 my-2" src="./images/Frame 652.svg">
+                <img class="mx-3 my-2" src="./images/Frame 656.svg">
+                <img class="mx-3 my-2" src="./images/Frame 638.svg">
+                <img class="mx-3 my-2" src="./images/Frame 655.svg">
             </div>
         </div>
         
